--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- TODO: Please update the title of this HTML page according to your needs. -->
-    <title>TW 2023 Homework 3</title>
-    <script src="scripts/index.js"></script>
+    <title>Weather Viewer Application</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/weather_cards.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/spinner.css">
+    <script src="scripts/spinner.js" defer></script>
+    <script src="scripts/index.js" defer></script>
+    <script src="scripts/weather_cards.js" defer></script>
 </head>
 <body>
-   <div id="root"></div>
+    <div id="root">
+        <header>
+            <h1>Weather Viewer</h1>
+        </header>
+        <ul class="grid-container">
+            <li class="grid-item">
+              <div class="card card-night">
+                <div class="night"></div>
+              </div>
+              <div class="status">
+                <p class="cardtitle"></p>
+                <p class="subtext"></p>
+              </div>
+            </li>
+            <li class="grid-item">
+              <div class="card card-rain">
+                <div class="rain"></div>
+              </div>
+              <div class="status">
+                <p class="cardtitle"></p>
+                <p class="subtext"></p>
+              </div>
+            </li>
+            <li class="grid-item">
+              <div class="card card-snow">
+                <div class="snow"></div>
+              </div>
+              <div class="status">
+                <p class="cardtitle"></p>
+                <p class="subtext"></p>
+              </div>
+            </li>
+            <li class="grid-item">
+              <div class="card card-storm">
+                <div class="storm"></div>
+              </div>
+              <div class="status">
+                <p class="cardtitle"></p>
+                <p class="subtext"></p>
+              </div>
+            </li>
+            <li class="grid-item">
+              <div class="card card-sunny">
+                <div class="sunny"></div>
+              </div>
+              <div class="status">
+                <p class="cardtitle"></p>
+                <p class="subtext"></p>
+              </div>
+            </li>
+          </ul>
+        <main>
+            <div class="search-container">
+                <input type="text" id="autocomplete" placeholder="Search for a city">
+                <ul id="results"></ul>
+                <ul id="favorites" class="hidden"></ul>
+            </div>
+            <div id="weather-card" class="hidden">
+            </div>
+        </main>
+    </div>
+    <div hidden id="spinner"></div>
 </body>
 </html>
