Save progress: added favorites list with remove button

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             aria-label="Search for a city"
           />
           <ul id="results"></ul>
+          <h2 id="favorites-title">Favorite Cities</h2>
           <ul id="favorites" class="hidden"></ul>
         </div>
 
