Menu Bar + About Page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
   <body>
     <div id="root">
       <header>
-        <h1>Weather Viewer</h1>
+        <nav class="main-nav">
+          <a href="index.html" class="nav-logo">
+            <h1>Weather Viewer</h1>
+          </a>
+    
+          <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </nav>
       </header>
 
       <!-- Weather category cards -->
