--- a/city_weather.html
+++ b/city_weather.html
@@ -13,7 +13,16 @@
 <body>
     <div id="root">
         <header>
-            <h1>Weather Viewer</h1>
+            <nav class="main-nav">
+                <a href="index.html" class="nav-logo">
+                    <h1>Weather Viewer</h1>
+                </a>
+    
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <h2 class="subtitle">Forecast for the next 5 days</h2>
