Menu Bar + About Page + Favorite Page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     
           <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="favorites.html">Favorites</a></li>
             <li><a href="about.html">About</a></li>
-          </ul>
         </nav>
       </header>
 
@@ -94,8 +94,6 @@
             aria-label="Search for a city"
           />
           <ul id="results"></ul>
-          <h2 id="favorites-title">Favorite Cities</h2>
-          <ul id="favorites" class="hidden"></ul>
         </div>
 
         <section id="weather-card" class="hidden"></section>
