--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                 
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="favorites.html">Favorites</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                 </ul>
             </nav>
