--- a/city_weather.html
+++ b/city_weather.html
@@ -20,8 +20,9 @@
     
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="favorites.html">Favorites</a></li>
                 <li><a href="about.html">About</a></li>
-                </ul>
+            </ul>
             </nav>
         </header>
         <main>
