--- a/city_weather.html
+++ b/city_weather.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="styles/weather_cards.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/spinner.css">
+    
     <script src="scripts/spinner.js" defer></script>
     <script src="scripts/city_weather.js" defer></script>
     <script src="scripts/weather_cards.js" defer></script>
+    <script src="scripts/global_search.js" defer></script>
 </head>
 <body>
     <div id="root">
@@ -18,6 +20,16 @@
                     <h1>Weather Viewer</h1>
                 </a>
     
+            <div class="nav-search">
+                <input
+                    type="text"
+                    id="autocomplete"
+                    placeholder="Search for a city"
+                    aria-label="Search for a city"
+                />
+                <ul id="results" class="hidden"></ul>
+            </div>
+
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="favorites.html">Favorites</a></li>
@@ -34,5 +46,6 @@
         </main>
     </div>
     <div hidden id="spinner"></div>
+    <div id="toast-notification" class="hidden"></div>
 </body>
 </html>
