--- a/favorites.html
+++ b/favorites.html
@@ -14,6 +14,7 @@
 
     <script src="scripts/spinner.js" defer></script>
     <script src="scripts/favorites.js" defer></script>
+    <script src="scripts/global_search.js" defer></script>
 </head>
 <body>
     <div id="root">
@@ -23,6 +24,16 @@
                 <a href="index.html" class="nav-logo">
                     <h1>Weather Viewer</h1>
                 </a>
+                <div class="nav-search">
+                    <input
+                        type="text"
+                        id="autocomplete"
+                        placeholder="Search for a city"
+                        aria-label="Search for a city"
+                    />
+                    <ul id="results" class="hidden"></ul>
+                </div>
+
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="favorites.html" class="active">Favorites</a></li>
@@ -45,5 +56,6 @@
     </div>
 
     <div id="spinner" hidden></div>
+    <div id="toast-notification" class="hidden"></div>
 </body>
 </html>
